--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -11,3 +11,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
+
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+}
