--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -10,6 +10,8 @@
 body {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
+
+    background-color: #434343;
 }
 
 .container {
